--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: account
+    name: order
     labels:
-        app: account
+        app: order
 spec:
     type: ClusterIP
     ports:
         - port: 8080
     selector:
-        app: account
+        app: order
